--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </p>
           <p>
             My project was done using HTML, CSS and little bit of JAVA SCRIPT.
-            For more information about my first project click the button .
+            For more information about my first project click the button in order to see.
             <a href="https://feisalahmed.github.io/project1/"> <button type="button">click here</button>
             </a>
           </p>
