--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                   <i class="fab fa-facebook-square">facebook</i>
                   <i class="fab fa-instagram">instagram</i>
                   <i class="fab fa-whatsapp">whatsapp</i>
+                  <i class="fab fa-slack">slack</i>
                 </footer>
               </div>
             </div>
