add footer twiter

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                   <i class="fab fa-instagram">instagram</i>
                   <i class="fab fa-whatsapp">whatsapp</i>
                   <i class="fab fa-slack">slack</i>
+                  <i class="fab fa-twitter">twitter</i>
                 </footer>
               </div>
             </div>
