--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="paragraphs">
         <p>
           Twenty years from now you will be more disappointed by the things that
-          you didn't do than by the once you did do.
+          you didn't do than by the once you did, so do in order for not to be dissapointed.
         </p>
         <p>
           Every great developer you know got there by solving problems they were
