--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                   <i class="fab fa-whatsapp">whatsapp</i>
                   <i class="fab fa-slack">slack</i>
                   <i class="fab fa-twitter">twitter</i>
+                  <i class="far fa-envelope">Email</i>
+
+
                 </footer>
               </div>
             </div>
