--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@
                   <i class="fab fa-slack">slack</i>
                   <i class="fab fa-twitter">twitter</i>
                   <i class="far fa-envelope">Email</i>
-
-
                 </footer>
               </div>
             </div>
@@ -116,6 +114,11 @@
       </div>
     </section>
   </main>
+  <script>
+    function onload() {
+      aleart "nice to meet you",
+    }
+  </script>
 </body>
 
 </html>
